# MathInterpreterCLI

./: .gitignore  README.md
scripts/: compile.sh  run.sh  runWithLoad.sh
src/: CMakeLists.txt  calc.h  main.c  mainBison.y
src/Flex&Bison/: CLIHelp.c  CLIHelp.h  compile.sh  lex.yy.c  mainBison.output  mainBison.tab.c  mainBison.tab.h  mainBison.y  mainFlex.l
src/MICLI/: LANG_WORDS.h
src/errorManager/: errorManager.c  errorManager.h
src/readerSystem/: readerSystem.c  readerSystem.h
src/symbolTable/: symbolTable.c  symbolTable.h
src/utils/: bHashTable.c  bHashTable.h  colours.h  defineParser.c  defineParser.h
